--- a/public/faz-tmp.html
+++ b/public/faz-tmp.html
@@ -5,7 +5,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Welcome to [Product Name], {{name}}!</title>
+  <title>FortiManager Cloud</title>
   <!--
     The style block is collapsed on page load to save you some scrolling.
     Postmark automatically inlines all CSS properties for maximum email client
@@ -24,30 +24,9 @@
       height: 100%;
       margin: 0;
       line-height: 1.4;
-      //background-color: #F2F4F6;
       background-color: #eee;
-      color: #74787E;
+      color: #333;
       -webkit-text-size-adjust: none;
-    }
-
-    p,
-    ul,
-    ol,
-    blockquote {
-      line-height: 1.4;
-      text-align: left;
-    }
-
-    a {
-      color: #3869D4;
-    }
-
-    a img {
-      border: none;
-    }
-
-    td {
-      word-break: break-word;
     }
 
     /* Layout ------------------------------ */
@@ -111,10 +90,12 @@
       display: flex;
       align-items: center;
     }
+
     .contact-method {
       margin-left: auto;
       display: flex;
     }
+
     .contact-phone {
       margin-left: 15px;
     }
@@ -123,22 +104,6 @@
       padding: 20px 0;
     }
 
-    .data-list {
-      background-color: #fff;
-      font-size: 12px;
-      padding: 25px;
-    }
-
-    .data-row {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .data-row-name {
-      width: 100px;
-      font-weight: bold;
-    }
 
     /* Attribute list ------------------------------ */
 
@@ -157,62 +122,56 @@
 
     /* Utilities ------------------------------ */
 
-    .align-right {
-      text-align: right;
-    }
-
-    .align-left {
-      text-align: left;
-    }
-
-    .align-center {
-      text-align: center;
-    }
 
     /*Media Queries ------------------------------ */
 
-    @media only screen and (max-width: 600px) {
-    }
+    @media only screen and (max-width: 600px) {}
 
-    @media only screen and (max-width: 500px) {
-    }
+    @media only screen and (max-width: 500px) {}
 
     /* Buttons ------------------------------ */
 
-    /* Type ------------------------------ */
+    /* can customized ------------------------------ */
 
-    h1 {
-      margin-top: 0;
-      color: #2F3133;
-      font-size: 19px;
-      font-weight: bold;
-      text-align: left;
+    .greeding {
+      margin-bottom: 20px;
     }
 
-    h2 {
-      margin-top: 0;
-      color: #2F3133;
-      font-size: 16px;
-      font-weight: bold;
-      text-align: left;
-    }
-
-    h3 {
-      margin-top: 0;
-      color: #2F3133;
+    .paragraph {
+      /* color: #74787E; */
+      color: #333;
       font-size: 14px;
+      margin-bottom: 20px;
+    }
+
+    .alert {
+      background-color: #fff;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      border-radius: 2px;
+      margin-bottom: 20px;
+    }
+
+    .alert-img {
+      width: 48px;
+      margin-right: 20px;
+    }
+
+    .alert-title {
+      font-size: 20px;
       font-weight: bold;
-      text-align: left;
     }
 
-    p {
-      margin-top: 0;
-      color: #74787E;
-      font-size: 14px;
-      line-height: 1.5em;
-      text-align: left;
+    .alert-info {
+      font-size: 12px;
     }
 
+    .ending {}
+
+    .ending-title {}
+
+    .ending-name {}
   </style>
 </head>
 
@@ -223,17 +182,11 @@
       <div class="email-masthead">
         <a href="https://fortinet.com" target="_blank" role="img" aria-label="Powered by Fortinet"
           class="email-masthead_logo">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 619.8 71.1">
-            <path fill="#000"
-              d="M0 70.4V.8h76.8v15.5H17v11.8h51.5v15H17v27.3zm257 0V46.7c0-2.1-1.8-3-1.8-3-.8-.5-3.2-.6-6.8-.6h.8-35.8v27.4h-17V.8h53c9.2 0 15.5 1.4 19.8 5.6 4.3 4.4 4.8 10.1 4.9 16v5c.1 5-2.6 9.6-5.8 12.3l.6.3c1.3.6 2 1.5 2 1.5 2.4 3.1 2.4 5.7 2.4 9v19.9zm-9.2-42.3c4.2 0 6.6 0 7.6-.6 0 0 1.7-1 1.8-3v-4.6c0-2.1-1.8-3-1.8-3-1.3-.7-3.6-.6-8.9-.6h-33.1v11.8h35.1zM299 70.4V16.3h-16V.8h63.8v15.5H316v54.1zm4.4-58.5V9.6zm264.2 58.5V16.3h-16V.8h63.8v15.5h-30.8v54.1zm4.3-58.5V9.6zM355.2 70.4V.8h17v69.6zm119.4 0V.8h68.5v15.5h-51.5v11.8h35.8v15h-35.8v11.8h51.9v15.5zm-72.6 0h-17.1V.8h54.9s10.1-.4 16.4 5.9c0 0 6.5 5.5 6.5 18.8v44.9h-17v-46s.2-4.7-1.4-6.3c0 0-1.4-1.8-4.1-1.8H402z">
-            </path>
-            <path fill="#EE3124"
-              d="M84.3 26.3h28.2v18.5H84.3zm36-26.3H148v18.5h-27.7zm0 52.5H148V71h-27.7zm35.4-26.2H184v18.5h-28.3zM95.9 0C90 1.5 85.4 8.1 84.3 16.5v2.1h28.2V0H95.9zM84.3 52.5v2.3c1 8 5.3 14.4 10.9 16.2h17.4V52.5H84.3zm99.7-34v-2.1c-1.1-8.3-5.7-14.9-11.6-16.5h-16.7v18.5H184zm-10.9 52.6c5.5-1.9 9.8-8.2 10.9-16.2v-2.3h-28.3v18.5h17.4z">
-            </path>
-          </svg>
+          <!-- <img src="cid:fortinet-logo" alt="Fortinet home" width="96"> -->
+          <img src="fortinet-logo.png" alt="Fortinet home" width="96">
         </a>
         <div class="email-masthead_name"><span class="email-masthead_split">|</span>
-          <span>FortiEDR Cloud</span>
+          <span>FortiManager Cloud</span>
         </div>
       </div>
 
@@ -241,26 +194,32 @@
       <div class="email-body">
         <!-- Body content -->
         <div class="content-cell">
-          <h3>Dear {{name}} {{surname}},</h3>
-            <p class="">This is just a quick note to inform you that customer raised a request to
-              provision the below
-              FortiEDR service:</p>
-
-            <div class="data-list">
-              {{#each dataObj}}
-              <div class="data-row">
-                <div class="data-row-name">{{@key}} </div>
-                <div class="data-row-value">{{this}}</div>
-              </div>
-              {{/each}}
+          <div class="alert">
+            <img src="alert-icon.png" alt="" class="alert-img" />
+            <div class="alert-content">
+              <div class="alert-title">Scheduled Maintenance on April 15th</div>
+              <div class="alert-info">You can view more details in the
+                https://status.fortimanager.forticloud.com </div>
             </div>
+
+          </div>
+          <div class="greeding">Dear customer,</div>
+          <p class="paragraph" data-customized> We will be performing infrastructure maintenance affecting
+            FortiManager Cloud Portal in North America Region starting at 2022-4-15, 23:00 UTC. The
+            maintenance should take approximately one hour. There may be some service disruptions
+            when accessing the cloud portal during this window.
+          </p>
+          <div class="ending">
+            <div class="ending-title">Sincerely,</div>
+            <div class="ending-name">The Fortinet Team</div>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="email-footer">
       <div class="email-footer_inner">
-        <div class="copy-right">Copyright &copy; {{year}} Fortinet Inc. All rights reserved</div>
+        <div class="copy-right">Copyright © 2022 Fortinet, Inc. All Rights Reserved.</div>
         <div class="contact-method">
           <div class="contact-email">
             Email: support@fortinet.com
