--- a/public/faz-tmp.html
+++ b/public/faz-tmp.html
@@ -20,17 +20,29 @@
     }
 
     body {
-      width: 100% !important;
+      width: 100% ;
       height: 100%;
       margin: 0;
       line-height: 1.4;
       background-color: #eee;
       color: #333;
+      overflow: hidden;
+    }
+    h1,h2,h3,h4,h5,h6,p{
+      margin:0
+    }
+    h3 {
+      font-size: 20px;
+    }
+    p {
+      font-size: 14px;
     }
 
     /* Layout ------------------------------ */
 
     .email-wrapper {
+      box-sizing: border-box;
+      max-height: 100%;
       width: 80%;
       margin: 30px auto;
       padding: 0;
@@ -38,7 +50,9 @@
     }
 
     .email-content {
+      max-height: calc(100% - 50px);
       width: 100%;
+      box-sizing: border-box;
       margin: 0;
       padding: 20px 8%;
       font-size: 14px;
@@ -131,17 +145,16 @@
             style="background-color:white; padding: 20; display: flex; align-items: center; border-radius: 2px; margin-bottom: 20px;">
             <img id="alert-img" src="alert-icon.png"  data-customized alt="" class="alert-img" style="width: 48px; margin-right: 20px;"/>
             <div class="alert-content" id="alert-content" >
-              <div id="alert-title" class="alert-title" data-customized style="font-weight: bold; font-size:20px">Scheduled Maintenance on April 15th</div>
-              <div id="alert-info" class="alert-info" data-customized style="font-size:12px">You can view more details in the https://status.fortimanager.forticloud.com </div>
+              <p id="alert-title" class="alert-title" data-customized style="font-weight: bold; font-size:20px;">Scheduled Maintenance on April 15th</p>
+              <p id="alert-info" class="alert-info" data-customized style="font-size:12px">You can view more details in the https://status.fortimanager.forticloud.com </p>
             </div>
 
           </div>
-          <div id="greeding" class="greeding" style="margin-bottom: 20px;" data-customized>Dear customer,</div>
-          <p id="main-content" class="paragraph" data-customized> We will be performing infrastructure maintenance affecting FortiManager Cloud Portal in North America Region starting at 2022-4-15, 23:00 UTC. The maintenance should take approximately one hour. There may be some service disruptions when accessing the cloud portal during this window.
-          </p>
+          <p id="greeding" class="greeding" style="margin-bottom: 20px;" data-customized>Dear customer,</p>
+          <p id="main-content" class="paragraph" style="margin-bottom: 20px;" data-customized> We will be performing infrastructure maintenance affecting FortiManager Cloud Portal in North America Region starting at 2022-4-15, 23:00 UTC. The maintenance should take approximately one hour. There may be some service disruptions when accessing the cloud portal during this window.</p>
           <div class="ending" id="ending">
-            <div id="ending-title" class="ending-title" data-customized>Sincerely,</div>
-            <div id="ending-name" class="ending-name" data-customized>The Fortinet Team</div>
+            <p id="ending-title" class="ending-title" data-customized>Sincerely,</p>
+            <p id="ending-name" class="ending-name" data-customized>The Fortinet Team</p>
           </div>
         </div>
       </div>
